[gd_scene load_steps=2 format=3 uid="uid://eq8vru00jtme"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_h0pf3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0pf3")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 233.0
offset_right = 597.0
offset_bottom = 256.0
text = "Game Over !"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 268.0
offset_right = 599.0
offset_bottom = 291.0
text = "Score : "

[node name="TryAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 479.0
offset_top = 309.0
offset_right = 624.0
offset_bottom = 342.0
text = "Try again"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 344.0
offset_right = 625.0
offset_bottom = 375.0
text = "Main Menu"

[connection signal="pressed" from="TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
